# MARTINEZ_Alex_Llm-Agents_2024

./: .gitignore  .readthedocs.yaml  README.md  config.yaml  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Gemini-checkpoint.ipynb
docs/: requirements.txt
docs/source/: conf.py  configuration.rst  index.rst  overview.rst  tfg.Agents.rst  tfg.System.rst  tfg.evaluation.rst  tfg.rst  tfg.utils.rst
src/tfg/: CustomAgentRouter.py  Falcon7b.ipynb  GPT-4.ipynb  Gemini.ipynb  GeminiStreamlit.py  HITLAgentRouter.py  Langgraph.py  Llama3.ipynb  OpenStreamlit.py  OutputParser.py  __init__.py
src/tfg/Agents/: BaseAgent.py  CalcAgent.py  CrossrefAgent.py  DBAgent.py  ElsevierAgent.py  NLPAgent.py  PlannerAgent.py  VerifierAgent.py  WeatherAgent.py  __init__.py
src/tfg/System/: langgraph_HITL.py  main.py
src/tfg/Tools/: CalcTool.py  CrossrefTool.py  DBTool.py  ElsevierTool.py  GoogleSerper.py  Tools.py  WeatherTool.py  __init__.py
src/tfg/evaluation/: __init__.py  evaluator.py  scenario_runner.py
src/tfg/evaluation/metrics/: scenario_0_metrics.txt  scenario_10_metrics.txt  scenario_11_metrics.txt  scenario_12_metrics.txt  scenario_13_metrics.txt  scenario_14_metrics.txt  scenario_15_metrics.txt  scenario_16_metrics.txt  scenario_17_metrics.txt  scenario_18_metrics.txt  scenario_19_metrics.txt  scenario_1_metrics.txt  scenario_2_metrics.txt  scenario_3_metrics.txt  scenario_4_metrics.txt  scenario_5_metrics.txt  scenario_6_metrics.txt  scenario_7_metrics.txt  scenario_8_metrics.txt  scenario_9_metrics.txt
src/tfg/evaluation/scenarios/: complex_scenarios.txt
src/tfg/utils/: config.py
