[project]
name = "tfg"
version = "0.1.0"
description = ""
authors = [
    {name = "alexxmartinezz",email = "martinezesquiviasalejandro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "transformers>=4.48.1,<5.0.0",
    "torch>=2.5.1,<3.0.0",
    "langchain>=0.3.15,<0.4.0",
    "langchain-community>=0.3.15,<0.4.0",
    "requests>=2.32.3,<3.0.0",
    "pyowm>=3.3.0,<4.0.0",
    "influxdb-client>=1.48.0,<2.0.0",
    "habanero>=2.0.0,<3.0.0",
    "vertexai==1.71.1",
    "langchain-google-vertexai==2.0.9",
    "google-cloud-aiplatform==1.71.1",
    "accelerate (>=1.3.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "langgraph (>=0.3.5,<0.4.0)",
    "anthropic[vertex] (>=0.49.0,<0.50.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
