[tool.poetry]
name = "tfg"
version = "0.1.0"
description = ""
authors = ["alexxmartinezz <martinezesquiviasalejandro@gmail.com>"]
readme = "README.md"
packages = [
    { include = "tfg", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
transformers = ">=4.48.1,<5.0.0"
torch = ">=2.1.2,<3.0.0"
langchain = ">1.3.0,<2.0.0"
langchain-community = ">=0.3.15,<1.4.0"
requests = ">=2.32.4,<3.0.0"
pyowm = ">=3.3.0,<4.0.0"
influxdb-client = ">=1.48.0,<2.0.0"
vertexai = "^1.71.1"
accelerate = ">=1.3.0,<2.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
pandas = ">=2.2.3,<3.0.0"
datasets = ">=3.2.0,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
matplotlib = ">=3.10.0,<4.0.0"
langgraph = ">=1.0.10,<1.4.0"
anthropic = "^0.49.0"
langgraph-supervisor = "^0.0.30"
langgraph-checkpoint = "^4.0.0"
graphviz = "^0.20.3"
grandalf = "^0.8"
urllib3 = ">=2.7.0,<3.0.0"
habanero = ">=2.3.0"
h11 = "^0.16.0"
pillow = ">=12.2.0,<14.0"
aiohttp = ">=3.14.0,<5.0"
pyarrow = ">=24.0.0,<30.0.0"
protobuf = ">=5.29.6,<7.0.0"
langsmith = ">=0.8.0,<1.5.0"
pyasn1 = ">=0.6.3,<1.5.0"
orjson = ">=3.11.6,<5.0.0"
python-dotenv = ">=1.2.2,<2.0.0"


[tool.poetry.group.dev.dependencies]
sphinx = ">=8.2,<9.0"
sphinx-autodoc-typehints = "^3.2.0"
sphinx_rtd_theme = ">=3.0.0,<5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
